infra/k8s/posts-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-nodeport-srv
spec: 
    type: NodePort
    selector:
        app: posts
    ports:
     - name: posts
       protocol: TCP
       port: 4002
       targetPort: 4002
